# MagnettoPrjct

./: .gitignore  AlfvenWaveTest.ipynb  BrioNetTest.ipynb  CMakeLists.txt  FileIO.h  GasSolver2D.cpp  GasSolver2D.h  LinOp.h  MHDProblem.cpp  MHDProblem.h  MHDProblem1D.cpp  MHDProblem1D.h  MHDSolver.cpp  MHDSolver.h  MHDSolver1D.cpp  MHDSolver1D.h  MHDSolver2D.cpp  MHDSolver2D.h  MHD_coursePrjct6.tex  NGmeshTesting.ipynb  NamesNConstants.h  NetExporter.ipynb  NetGeometry.cpp  NetGeometry.h  ShockTube1D.cpp  ShockTube1D.h  VTKexport.ipynb  main.cpp  mesh.txt  visualization.ipynb  vtk_example1.vtu
